--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -8,13 +8,17 @@
     "socketsNeedle": "// Insert sockets below",
     "filters": {
       "js": true,
-      "jade": true,
-      "sass": true,
-      "ngroute": true,
+      "html": true,
+      "less": true,
+      "uirouter": true,
+      "bootstrap": true,
+      "uibootstrap": true,
       "socketio": true,
       "mongoose": true,
       "auth": true
-    }
+    },
+    "routesBase": "/api/",
+    "pluralizeRoutes": true
   },
   "generator-ng-component": {
     "routeDirectory": "client/app/",
@@ -23,12 +27,12 @@
     "serviceDirectory": "client/app/",
     "basePath": "client",
     "filters": [
-      "ngroute"
+      "uirouter"
     ],
     "extensions": [
       "js",
-      "jade",
-      "scss"
+      "html",
+      "less"
     ]
   }
 }
