--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "adbfarm",
+  "name": "devicefarm",
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "adbkit": "^2.0.13",
-    "body-parser": "~1.0.0",
-    "composable-middleware": "^0.3.0",
-    "compression": "~1.0.1",
-    "connect-mongo": "^0.4.1",
-    "cookie-parser": "~1.0.1",
-    "errorhandler": "~1.0.0",
     "express": "~4.0.0",
-    "express-jwt": "^0.1.3",
-    "express-session": "~1.0.2",
-    "jade": "~1.2.0",
-    "jsonwebtoken": "^0.3.0",
-    "lodash": "~2.4.1",
-    "method-override": "~1.0.0",
-    "mongoose": "~3.8.8",
     "morgan": "~1.0.0",
+    "body-parser": "~1.0.0",
+    "method-override": "~1.0.0",
+    "static-favicon": "~1.0.1",
+    "cookie-parser": "~1.0.1",
+    "express-session": "~1.0.2",
+    "errorhandler": "~1.0.0",
+    "compression": "~1.0.1",
+    "lodash": "~2.4.1",
+    "ejs": "~0.8.4",
+    "mongoose": "~3.8.8",
+    "jsonwebtoken": "^0.3.0",
+    "express-jwt": "^0.1.3",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
-    "socket.io": "~0.9.16",
-    "socketio-jwt": "^2.0.2",
-    "static-favicon": "~1.0.1"
+    "composable-middleware": "^0.3.0",
+    "connect-mongo": "^0.4.1",
+    "socket.io": "~1.0.6",
+    "socketio-jwt": "^2.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-autoprefixer": "~0.7.2",
-    "grunt-bower-install": "~1.4.0",
+    "grunt-wiredep": "~1.8.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compass": "~0.7.2",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
@@ -40,12 +38,10 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-jade": "^0.11.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-google-cdn": "~0.4.0",
     "grunt-newer": "~0.7.0",
-    "grunt-ngmin": "~0.0.3",
+    "grunt-ng-annotate": "^0.2.3",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
@@ -54,11 +50,11 @@
     "grunt-nodemon": "~0.2.0",
     "grunt-angular-templates": "^0.5.4",
     "grunt-dom-munger": "^3.4.0",
-    "grunt-protractor-runner": "^0.2.4",
+    "grunt-protractor-runner": "^1.1.0",
     "grunt-asset-injector": "^0.1.0",
     "grunt-karma": "~0.8.2",
+    "grunt-build-control": "DaftMonk/grunt-build-control",
     "grunt-mocha-test": "~0.10.2",
-    "grunt-contrib-sass": "^0.7.3",
     "jit-grunt": "^0.5.0",
     "time-grunt": "~0.3.1",
     "grunt-express-server": "~0.4.17",
