서버-클라이언 소켓통신 구현 샘플 추가

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "composable-middleware": "^0.3.0",
     "connect-mongo": "^0.4.1",
     "socket.io": "~1.0.6",
-    "socketio-jwt": "^2.0.2"
+    "socketio-jwt": "^2.0.2",
+    "adbkit": "^2.0.15",
+    "string": "^1.9.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
@@ -77,7 +79,8 @@
     "karma": "~0.12.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "supertest": "~0.11.0",
-    "should": "~3.3.1"
+    "should": "~3.3.1",
+    "socket.io-client": "^1.0.6"
   },
   "engines": {
     "node": ">=0.10.0"
