--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "moment": "~2.8.2"
+    "moment": "~2.8.2",
+    "angularjs-scroll-glue": "~0.0.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
