--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "adbkit": "^2.0.15",
-    "body-parser": "~1.0.0",
+    "adbkit": "^2.1.2",
+    "body-parser": "~1.9.0",
     "composable-middleware": "^0.3.0",
-    "compression": "~1.0.1",
+    "compression": "~1.1.0",
     "connect-mongo": "^0.4.1",
-    "cookie-parser": "~1.0.1",
-    "ejs": "~0.8.4",
-    "errorhandler": "~1.0.0",
-    "express": "~4.0.0",
-    "express-jwt": "^0.1.3",
-    "express-session": "~1.0.2",
+    "cookie-parser": "~1.3.3",
+    "ejs": "~1.0.0",
+    "errorhandler": "~1.2.0",
+    "express": "~4.9.5",
+    "express-jwt": "^0.4.0",
+    "express-session": "^1.8.2",
     "ip": "^0.3.1",
-    "jsonwebtoken": "^0.3.0",
+    "jsonwebtoken": "^1.1.2",
     "lodash": "~2.4.1",
-    "method-override": "~1.0.0",
+    "method-override": "~2.2.0",
     "moment": "^2.8.3",
-    "mongoose": "~3.8.8",
-    "morgan": "~1.0.0",
-    "passport": "~0.2.0",
-    "passport-local": "~0.1.6",
+    "mongoose": "~3.8.17",
+    "morgan": "~1.3.2",
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
     "q": "^1.0.1",
-    "socket.io": "~1.0.6",
-    "socketio-jwt": "^2.0.2",
-    "static-favicon": "~1.0.1",
-    "string": "^1.9.1",
+    "serve-favicon": "~2.1.5",
+    "socket.io": "~1.1.0",
+    "socketio-jwt": "^2.3.5",
+    "string": "^2.1.0",
     "winston": "^0.8.0"
   },
   "devDependencies": {
