--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "socket.io": "~1.1.0",
     "socketio-jwt": "^2.3.5",
     "string": "^2.1.0",
+    "wait-for-mongo": "^0.1.1",
     "winston": "^0.8.0"
   },
   "devDependencies": {
