--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
   "name": "devicefarm",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "main": "server/app.js",
   "dependencies": {
     "adbkit": "2.0.15",
-    "body-parser": "~1.9.0",
+    "body-parser": "^1.9.3",
     "composable-middleware": "^0.3.0",
-    "compression": "~1.1.0",
-    "connect-mongo": "^0.4.1",
-    "cookie-parser": "~1.3.3",
-    "ejs": "~1.0.0",
-    "errorhandler": "~1.2.0",
-    "express": "~4.9.5",
+    "compression": "^1.1.2",
+    "connect-mongo": "^0.4.2",
+    "cookie-parser": "^1.3.4",
+    "ejs": "^1.0.0",
+    "errorhandler": "^1.2.4",
+    "express": "^4.9.8",
     "express-jwt": "^0.4.0",
-    "express-session": "^1.8.2",
+    "express-session": "^1.10.4",
     "ip": "^0.3.1",
-    "jsonwebtoken": "^1.1.2",
-    "lodash": "~2.4.1",
-    "method-override": "~2.2.0",
-    "moment": "^2.8.3",
+    "jsonwebtoken": "^1.3.0",
+    "lodash": "^2.4.1",
+    "method-override": "^2.2.0",
+    "moment": "^2.9.0",
     "mongoose": "~3.8.17",
-    "morgan": "~1.3.2",
+    "morgan": "^1.3.2",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
-    "q": "^1.0.1",
-    "serve-favicon": "~2.1.5",
-    "socket.io": "~1.1.0",
+    "q": "^1.2.0",
+    "serve-favicon": "^2.1.7",
+    "socket.io": "^1.1.0",
     "socketio-jwt": "^2.3.5",
-    "string": "^2.1.0",
+    "string": "^2.2.0",
     "wait-for-mongo": "^0.1.1",
-    "winston": "^0.8.0"
+    "winston": "^0.8.3"
   },
   "devDependencies": {
     "connect-livereload": "~0.4.0",
     "grunt": "~0.4.4",
     "grunt-angular-templates": "^0.5.4",
     "grunt-asset-injector": "^0.1.0",
-    "grunt-autoprefixer": "~0.7.2",
+    "grunt-autoprefixer": "^0.7.6",
     "grunt-build-control": "DaftMonk/grunt-build-control",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
@@ -44,48 +44,30 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-imagemin": "~0.7.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-less": "^0.11.0",
+    "grunt-contrib-imagemin": "^0.7.2",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-dom-munger": "^3.4.0",
     "grunt-env": "~0.4.1",
     "grunt-express-server": "~0.4.17",
     "grunt-google-cdn": "~0.4.0",
-    "grunt-karma": "~0.8.2",
-    "grunt-mocha-test": "~0.10.2",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
-    "grunt-node-inspector": "~0.1.5",
-    "grunt-nodemon": "~0.2.0",
+    "grunt-node-inspector": "^0.1.6",
+    "grunt-nodemon": "^0.2.1",
     "grunt-open": "~0.2.3",
-    "grunt-protractor-runner": "^1.1.0",
     "grunt-rev": "~0.1.0",
     "grunt-shell": "^1.1.1",
-    "grunt-svgmin": "~0.4.0",
+    "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "~2.1.1",
-    "grunt-wiredep": "~1.8.0",
+    "grunt-wiredep": "^1.8.0",
     "jit-grunt": "^0.5.0",
     "jshint-stylish": "~0.1.5",
-    "karma": "~0.12.9",
-    "karma-chrome-launcher": "~0.1.3",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jade-preprocessor": "0.0.11",
-    "karma-jasmine": "~0.1.5",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "karma-ng-jade2js-preprocessor": "^0.1.2",
-    "karma-ng-scenario": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-requirejs": "~0.2.1",
-    "karma-script-launcher": "~0.1.0",
     "open": "~0.0.4",
     "requirejs": "~2.1.11",
-    "should": "~3.3.1",
-    "socket.io-client": "^1.0.6",
-    "supertest": "~0.11.0",
+    "socket.io-client": "^1.3.5",
     "time-grunt": "~0.3.1",
     "winston": "^0.8.0"
   },
