--- a/package.json
+++ b/package.json
@@ -3,73 +3,72 @@
   "version": "0.1.0",
   "main": "server/app.js",
   "dependencies": {
-    "adbkit": "2.0.15",
-    "body-parser": "^1.9.3",
+    "adbkit": "^2.2.0",
+    "body-parser": "^1.12.3",
     "composable-middleware": "^0.3.0",
-    "compression": "^1.1.2",
-    "connect-mongo": "^0.4.2",
+    "compression": "^1.4.3",
+    "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.4",
-    "ejs": "^1.0.0",
-    "errorhandler": "^1.2.4",
-    "express": "^4.9.8",
-    "express-jwt": "^0.4.0",
-    "express-session": "^1.10.4",
-    "ip": "^0.3.1",
-    "jsonwebtoken": "^1.3.0",
-    "lodash": "^2.4.1",
-    "method-override": "^2.2.0",
-    "moment": "^2.9.0",
-    "mongoose": "~3.8.17",
-    "morgan": "^1.3.2",
+    "ejs": "^2.3.1",
+    "errorhandler": "^1.3.5",
+    "express": "^4.12.3",
+    "express-jwt": "^3.0.0",
+    "express-session": "^1.11.1",
+    "ip": "^0.3.2",
+    "jsonwebtoken": "^5.0.0",
+    "lodash": "^3.7.0",
+    "method-override": "^2.3.2",
+    "moment": "^2.10.2",
+    "mongoose": "^4.0.2",
+    "morgan": "^1.5.2",
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
-    "q": "^1.2.0",
-    "serve-favicon": "^2.1.7",
-    "socket.io": "^1.1.0",
-    "socketio-jwt": "^2.3.5",
-    "string": "^2.2.0",
-    "wait-for-mongo": "^0.1.1",
-    "winston": "^0.8.3"
+    "q": "^1.3.0",
+    "serve-favicon": "^2.2.0",
+    "socket.io": "^1.3.5",
+    "socketio-jwt": "^4.0.0",
+    "string": "^3.1.1",
+    "wait-for-mongo": "^0.2.0",
+    "winston": "^1.0.0"
   },
   "devDependencies": {
-    "connect-livereload": "~0.4.0",
-    "grunt": "~0.4.4",
-    "grunt-angular-templates": "^0.5.4",
+    "connect-livereload": "^0.5.3",
+    "grunt": "~0.4.5",
+    "grunt-angular-templates": "^0.5.7",
     "grunt-asset-injector": "^0.1.0",
-    "grunt-autoprefixer": "^0.7.6",
-    "grunt-build-control": "DaftMonk/grunt-build-control",
-    "grunt-concurrent": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-imagemin": "^0.7.2",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-autoprefixer": "^3.0.0",
+    "grunt-build-control": "^0.4.0",
+    "grunt-concurrent": "~1.0.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "~0.12.2",
+    "grunt-contrib-htmlmin": "~0.4.0",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-dom-munger": "^3.4.0",
-    "grunt-env": "~0.4.1",
-    "grunt-express-server": "~0.4.17",
-    "grunt-google-cdn": "~0.4.0",
-    "grunt-newer": "~0.7.0",
-    "grunt-ng-annotate": "^0.2.3",
+    "grunt-env": "~0.4.4",
+    "grunt-express-server": "~0.5.1",
+    "grunt-google-cdn": "~0.4.3",
+    "grunt-newer": "^1.1.0",
+    "grunt-ng-annotate": "^0.10.0",
     "grunt-node-inspector": "^0.1.6",
-    "grunt-nodemon": "^0.2.1",
-    "grunt-open": "~0.2.3",
-    "grunt-rev": "~0.1.0",
-    "grunt-shell": "^1.1.1",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "~2.1.1",
-    "grunt-wiredep": "^1.8.0",
-    "jit-grunt": "^0.5.0",
-    "jshint-stylish": "~0.1.5",
-    "open": "~0.0.4",
-    "requirejs": "~2.1.11",
+    "grunt-nodemon": "^0.4.0",
+    "grunt-open": "^0.2.3",
+    "grunt-rev": "^0.1.0",
+    "grunt-shell": "^1.1.2",
+    "grunt-svgmin": "^2.0.1",
+    "grunt-usemin": "^3.0.0",
+    "grunt-wiredep": "^2.0.0",
+    "jit-grunt": "^0.9.1",
+    "jshint-stylish": "~1.0.1",
+    "open": "~0.0.5",
+    "requirejs": "~2.1.17",
     "socket.io-client": "^1.3.5",
-    "time-grunt": "~0.3.1",
-    "winston": "^0.8.0"
+    "time-grunt": "~1.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
